@startuml
!pragma layout smetana
title 10. Exception Handling (Synced with Source, 2026-05-14)

skinparam shadowing false
skinparam componentStyle rectangle

class HttpChatController
class ProductAgentController
class ReservationAgentController
class SearchAgentController
class BaseA2AControllerSupport
class ProductA2AController
class ReservationA2AController
class SearchA2AController
class HttpChatService
class ScopedAgentChatService
class AgentOrchestrator
class HeuristicPlanningService
class LlmResponseComposeService
class DefaultAgentLlmRuntime
class ModelChatServiceFactory
class LlmCallPolicy
class SpringAiCompatibleChatService
class GlobalExceptionHandler

class ChatProcessingException
class McpException
class McpClientCreationException
class McpProcessLaunchException
class McpToolCallException
class McpValidationException

HttpChatController --> HttpChatService
ProductAgentController --> ScopedAgentChatService
ReservationAgentController --> ScopedAgentChatService
SearchAgentController --> ScopedAgentChatService
ProductA2AController --> BaseA2AControllerSupport
ReservationA2AController --> BaseA2AControllerSupport
SearchA2AController --> BaseA2AControllerSupport
BaseA2AControllerSupport --> ScopedAgentChatService
ScopedAgentChatService --> AgentOrchestrator
HttpChatService --> AgentOrchestrator
AgentOrchestrator --> HeuristicPlanningService
AgentOrchestrator --> LlmResponseComposeService
HeuristicPlanningService --> DefaultAgentLlmRuntime
LlmResponseComposeService --> DefaultAgentLlmRuntime
DefaultAgentLlmRuntime --> ModelChatServiceFactory
ModelChatServiceFactory --> SpringAiCompatibleChatService
SpringAiCompatibleChatService --> LlmCallPolicy

LlmCallPolicy --> ChatProcessingException : throw
GlobalExceptionHandler --> ChatProcessingException : @ExceptionHandler
GlobalExceptionHandler --> IllegalArgumentException : @ExceptionHandler
GlobalExceptionHandler --> IllegalStateException : @ExceptionHandler
GlobalExceptionHandler --> MethodArgumentNotValidException : @ExceptionHandler
GlobalExceptionHandler --> ConstraintViolationException : @ExceptionHandler
GlobalExceptionHandler --> WebClientResponseException : @ExceptionHandler
GlobalExceptionHandler --> HttpMessageNotReadableException : @ExceptionHandler
GlobalExceptionHandler --> RuntimeException : name-based mapping\nA2ARoutingException /\nDownstreamA2AException /\nSupervisorChatProcessingException

McpException <|-- McpClientCreationException
McpException <|-- McpProcessLaunchException
McpException <|-- McpToolCallException
McpException <|-- McpValidationException

note bottom of GlobalExceptionHandler
Return sanitized envelope by path
- /api/* -> ErrorResponse
- /a2a/* -> JsonRpcResponse(error)
- no stack trace
- no token/secret
- no internal payload leak
end note

note right of LlmCallPolicy
Maps upstream errors
- 401 -> auth guidance message
- 429/5xx -> retry/backoff policy
end note

@enduml
